# ehrmonize

./: .env.example  .gitignore  .readthedocs.yaml  LICENSE  README.md  demo_toDo.ipynb  demo_to_do.ipynb  dev.ipynb  experiments.ipynb  get_bigquery_data.py  pyproject.toml  requirements.txt  run_experiment.py  run_experiment_test.py  supported_models.yaml  utils_commands.md
assets/: utils_commands.md
dataset/: get_bigquery_data.py  tasks.md
dataset/labeled/: ehrmonize.csv  eicu_meds.csv  mimic_meds.csv
dataset/queries/: eicu_by_hosp_meds.sql  eicu_diagnoses.sql  eicu_intake_output.sql  eicu_labs.sql  eicu_meds.sql  mimic_diagnoses.sql  mimic_inputevents.sql  mimic_labs.sql  mimic_meds.sql
dataset/unlabeled/: eicu_by_hosp_meds.csv  eicu_diagnoses.csv  eicu_intake_output.csv  eicu_labs.csv  eicu_meds.csv  mimic_inputevents.csv  mimic_labs.csv  mimic_meds.csv
docs/: conf.py  index.rst  requirements.txt  usage.rst
docs/source/: api.rst  conf.py  index.rst
ehrmonize/: __init__.py  ehrmonize.py
experiments/: get_generic_name.csv  get_generic_route.csv  one_hot_drug_classification.csv  plot_metrics.ipynb  run_experiment.py  tableone.ipynb
experiments/configs/: experiments.yaml  experiments1.yaml  experiments2.yaml  experiments3.yaml  experiments4.yaml  get_generic_name.yaml  get_generic_route.yaml  one_hot_antibiotic.yaml  one_hot_antibiotic_classification.yaml  one_hot_anticoagulant.yaml  one_hot_antifungal.yaml  one_hot_diuretic.yaml  one_hot_electrolytes.yaml  one_hot_iv_fluid.yaml  one_hot_opioid_analgesic.yaml  one_hot_sedative.yaml  one_hot_stress_ulcer_prophylaxis.yaml  task_binary_drug_anticoagulant.yaml  task_generic_drug.yaml  task_generic_route.yaml
experiments/metrics/: get_generic_name.csv  get_generic_route.csv  one_hot_antibiotic.csv  one_hot_antibiotic_systemic.csv  one_hot_anticoagulant.csv  one_hot_diuretic.csv  one_hot_electrolytes.csv  one_hot_iv_fluid.csv  one_hot_opioid_analgesic.csv  one_hot_sedative.csv
experiments/results/: get_generic_name.csv  get_generic_name_MIMIC-IV.csv  get_generic_route_MIMIC-IV.csv  one_hot_antibiotic_MIMIC-IV.csv  one_hot_antibiotic_systemic_MIMIC-IV.csv  one_hot_anticoagulant_MIMIC-IV.csv  (+5 more)
(+130 files in other folders)
