[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ehrmonize"
version = "0.1.0a1"
authors = [
  { name="João Matos", email="joao.matos@duke.edu" },
  { name="A. Ian Wong", email="a.ian.wong@duke.edu" },
]
license = {file = "LICENSE"}
description = "ehrmonize is package to abstract medical concepts using large language models."
readme = "README.md"
requires-python = ">=3.9"
keywords=["ehrmonize", "large language models", "LLMs", "AI", "medical concept abstraction", "electronic health records", "EHR"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "Jinja2",
    "python-dotenv",
    "google-cloud-bigquery",
    "db-dtypes",
    "openai",
    "boto3",
    "tqdm",
]

[tool.black]
line-length = 119

[tool.pyright]
reportMissingImports = true

[project.urls]
homepage = "https://github.com/aiwonglab/ehrmonize/"
repository = "https://github.com/aiwonglab/ehrmonize/"